Added the quotes into individual containers.

--- a/quotes.html
+++ b/quotes.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>increment button</title>
+    <title>Quotes generator</title>
     <link rel="stylesheet" href="quotes.css" />
   </head>
   <body>
     <div class="container">
       <div id="quote-container">
-        <p id="quote-text"></p>
+        <button id="quote-button">Generate Quote</button>
       </div>
-      <button id="quote-button">Generate Quote</button>
+      <div id="quote-extender"></div>
     </div>
+
     <script src="quotes.js"></script>
   </body>
 </html>
