--- a/quotes.html
+++ b/quotes.html
@@ -9,6 +9,8 @@
   <body>
     <div class="container">
       <div id="quote-container">
+        <h1>Random Quote Generator</h1>
+        <p>Click to generate a quote.</p>
         <button id="quote-button">Generate Quote</button>
       </div>
       <div id="quote-extender"></div>
